# niu-survey

./: .gitignore  NIU_DESIGN_UPDATE.md  README.md  env.example  pyproject.toml  requirements.txt
apps/: __init__.py
apps/common/: __init__.py  apps.py  dashboard.py  environment.py
apps/surveys/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/surveys/migrations/: 0001_initial.py  0002_historicalsurvey_slug_survey_slug.py  0003_alter_survey_slug.py  0004_historicalsurvey_is_login_req_survey_is_login_req.py
config/: asgi.py  settings.py  unfold_settings.py  urls.py  wsgi.py
static/css/: niu-styles.css
templates/: base.html
templates/registration/: login.html
templates/surveys/: LoginForm.html  MainPage.html  Question.html  survey_detail.html  survey_detail_old.html  survey_embed.html  survey_list.html
